dev: fixed @keyframes visible

--- a/src/UIkit/BaseInput/BaseInput.module.css
+++ b/src/UIkit/BaseInput/BaseInput.module.css
@@ -4,7 +4,7 @@
   gap: 3px;
   text-align: left;
   transition: all var(--transition-delay) linear;
-  animation: visible 0.5s ease-in-out;
+  animation: var(--animation-visible);
 }
 
 .root input {
@@ -23,7 +23,7 @@
   font-weight: 300;
   line-height: 13px;
   color: var(--red);
-  animation: visible 0.5s ease-in-out;
+  animation: var(--animation-visible);
 }
 
 .error-message-white {
