--- a/src/UIkit/CreateInput/CreateInput.module.css
+++ b/src/UIkit/CreateInput/CreateInput.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   text-align: left;
   transition: all var(--transition-delay) linear;
-  animation: visible 0.5s ease-in-out;
+  animation: var(--animation-visible);
 }
 
 .menu-closed {
