--- a/src/components/Dapplet/Dapplet.module.css
+++ b/src/components/Dapplet/Dapplet.module.css
@@ -15,7 +15,7 @@
     linear-gradient(0deg, rgb(255 255 255 / 30%), rgb(255 255 255 / 30%));
   border-radius: 10px;
   box-shadow: var(--box-shadow);
-  animation: visible 0.5s ease-in-out;
+  animation: var(--animation-visible);
 }
 
 .burger {
