--- a/src/components/DappletsGroup/DappletsGroup.module.css
+++ b/src/components/DappletsGroup/DappletsGroup.module.css
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr;
   row-gap: 20px;
   margin-top: 20px;
-  animation: visible 0.5s ease-in-out;
+  animation: var(--animation-visible);
 }
 
 @media (width <= 880px) {
