--- a/src/components/StandardModal/StandardModal.module.css
+++ b/src/components/StandardModal/StandardModal.module.css
@@ -10,7 +10,7 @@
   border: 1px solid rgb(227 220 255 / 40%);
   border-radius: 10px;
   box-shadow: var(--box-shadow);
-  animation: visible 0.5s ease-in-out;
+  animation: var(--animation-visible);
 }
 
 .root-welcome {
