--- a/src/variables.css
+++ b/src/variables.css
@@ -36,4 +36,15 @@
   --transition-delay: 0.13s;
   --box-shadow: 10px 10px 40px 0 rgb(156 185 222 / 36.1%);
   --box-shadow-2: 10px 10px 40px 8px rgb(156 185 222 / 36.1%);
+  --animation-visible: visible 0.5s ease-in-out;
+}
+
+@keyframes visible {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
